# gpt-tg-bot

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  Taskfile.yml  rustfmt.toml  setup.http
.github/agents/: code-polisher.agent.md
.github/skills/code-review/: SKILL.md
infra/: .terraform.lock.hcl  backend.hcl.example  rust_lambda.tf  terraform.tfvars.example
src/: config.rs  event_handler.rs  gpt_client.rs  main.rs  message_processor.rs  s3_client.rs  tg_client.rs
