[package]
name = "gpt-tg-bot"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dev-dependencies]
mockall = "0.12.1"

[dependencies]
lambda_http = "0.11.1"
lambda_runtime = "0.11.1"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "json"] }
reqwest = { version = "0.12.3", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
derive_more = "0.99"
futures = "0.3"
rustls-webpki = "0.102.1"
anyhow = "1.0.75"
chrono = { version = "0.4.28", features = ["serde"] }
rand = "0.8.5"
phf = { version = "0.11.2", features = ["macros"] }
dyn-fmt = "0.4.0"
thiserror = "1.0.57"
dotenv = "0.15.0"
log = "0.4.20"
derive-new = "0.6.0"
async-trait = "0.1.80"

